kubernetes/apps/media/shiori/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shiori
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`shiori.toskbot.xyz`)
      kind: Rule
      services:
        - name: shiori
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiori
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: shiori.toskbot.xyz
  tls:
    - hosts:
        - shiori.toskbot.xyz
